plugins {
    id 'java'
    id 'maven-publish'

    id "io.github.gradle-nexus.publish-plugin" version "2.0.0"
}

apply from: "$rootDir/gradle/additional-artifacts.gradle"
apply from: "$rootDir/gradle/publishing.gradle"
apply from: "$rootDir/gradle/release.gradle"

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.gson

    testImplementation libs.assertj.core
    testImplementation libs.logback.core
    testImplementation libs.logback.classic
    testImplementation libs.mockwebserver3
    testImplementation libs.testng
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

jar {
    manifest {
        attributes 'Implementation-Title': 'Jenkins REST client',
                   'Implementation-Version': archiveVersion,
                   'Built-By': System.getProperty('user.name'),
                   'Built-Date': new Date(),
                   'Built-JDK': System.getProperty('java.version'),
                   'Built-Gradle': gradle.gradleVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

tasks.named('test') {
    failOnNoDiscoveredTests = false
}

tasks.register('mockTest', Test) {
    group = "Verification"
    description = "Mock tests"
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useTestNG()
    include '**/**MockTest*'
    maxParallelForks = 2
    testLogging {
        showStandardStreams = true
        events 'started', 'passed', 'failed'
    }
}

tasks.register('integTest', Test) {
    group = "Verification"
    description = "Integration tests - Jenkins must be running. See the README."
    dependsOn tasks.named('mockTest')
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    doFirst {
        def integProjectDir = project.file("${layout.buildDirectory.get().asFile}/integ-projects")
        if (!integProjectDir.exists()) {
            if (!integProjectDir.mkdirs()) {
                throw new RuntimeException("Failed to create integ-project directory @ ${integProjectDir.path}")
            }
        }
    }
    useTestNG()
    include "**/**LiveTest*"
    maxParallelForks = 1
    testLogging {
        showStandardStreams = true
        events 'started', 'passed', 'failed'
    }

    def possibleUsernameApiToken = project.findProperty("testJenkinsUsernameApiToken")
    def usernameApiToken = [:]
    if (possibleUsernameApiToken) {
        usernameApiToken["test.jenkins.usernameApiToken"] = possibleUsernameApiToken
    }

    systemProperties = [
        "test.jenkins.endpoint" : testJenkinsRestEndpoint,
        "test.jenkins.usernamePassword" : testJenkinsUsernamePassword
    ] << usernameApiToken
}

javadoc {
    source = sourceSets.main.allJava
    options.with {
        links "https://docs.oracle.com/en/java/javase/25/docs/api"
        addStringOption('Xdoclint:none', '-quiet')
    }
}
